; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-picolcd_backlight.c_picolcd_check_bl_fb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-picolcd_backlight.c_picolcd_check_bl_fb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.backlight_device = type { i32 }
%struct.fb_info = type { i32 }
%struct.picolcd_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.backlight_device*, %struct.fb_info*)* @picolcd_check_bl_fb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @picolcd_check_bl_fb(%struct.backlight_device* %0, %struct.fb_info* %1) #0 {
  %3 = alloca %struct.backlight_device*, align 8
  %4 = alloca %struct.fb_info*, align 8
  store %struct.backlight_device* %0, %struct.backlight_device** %3, align 8
  store %struct.fb_info* %1, %struct.fb_info** %4, align 8
  %5 = load %struct.fb_info*, %struct.fb_info** %4, align 8
  %6 = icmp ne %struct.fb_info* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load %struct.fb_info*, %struct.fb_info** %4, align 8
  %9 = load %struct.backlight_device*, %struct.backlight_device** %3, align 8
  %10 = call i64 @bl_get_data(%struct.backlight_device* %9)
  %11 = inttoptr i64 %10 to %struct.picolcd_data*
  %12 = call %struct.fb_info* @picolcd_fbinfo(%struct.picolcd_data* %11)
  %13 = icmp eq %struct.fb_info* %8, %12
  br label %14

14:                                               ; preds = %7, %2
  %15 = phi i1 [ false, %2 ], [ %13, %7 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local %struct.fb_info* @picolcd_fbinfo(%struct.picolcd_data*) #1

declare dso_local i64 @bl_get_data(%struct.backlight_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
